# platform-team-admin

./: .env_example  .gitignore  Pulumi.yaml  README.md  __main__.py  platform-team-admin.code-workspace  pyproject.toml  requirements.txt
.circleci/: config.yml
.git-hooks/: commit-msg  pre-commit  pre-commit-quick  pre-push
config/: circleci_values.yaml.tmpl  platform_team_values.yaml
deploy_scripts/: deploy.sh  setup_circleci.sh
modules/github/: members.py  repos.py  rulesets.py
scripts/: install-githooks.sh  local-deploy.sh  manage-hooks.sh  run-post-deployment-tests.sh  setup-circleci.sh
sdks/bitwarden/: pyproject.toml
sdks/bitwarden/pulumi_bitwarden/: README.md  __init__.py  _inputs.py  _utilities.py  attachment.py  folder.py  get_attachment.py  get_folder.py  get_item_login.py  get_item_secure_note.py  get_item_ssh_key.py  get_org_collection.py  get_org_group.py  get_org_member.py  get_organization.py  get_project.py  get_secret.py  item_login.py  item_secure_note.py  item_ssh_key.py  org_collection.py  outputs.py  project.py  provider.py  pulumi-plugin.json  secret.py
sdks/bitwarden/pulumi_bitwarden/config/: __init__.pyi  outputs.py  vars.py
secrets/: github_secrets.json.tmpl  pulumi_secrets.json.tmpl
secrets-setup/: github_secrets.json_example  inject_secrets.sh  pulumi_secrets.json_example
test/: README.md  conftest.py  test_members.py  test_repos.py  test_rulesets.py
test/integration/: README.md
tests/integration/: test_post_deployment.py
