[project]
name = "platform-team-admin"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "arpeggio==2.0.2",
    "attrs==25.3.0",
    "debugpy==1.8.14",
    "dill==0.4.0",
    "grpcio==1.66.2",
    "parver==0.5",
    "pip==25.1.1",
    "protobuf==4.25.8",
    "pulumi==3.181.0",
    "pulumi-github==4.17.0",
    "python-dotenv==1.1.1",
    "pyyaml==6.0.2",
    "semver==3.0.4",
    "setuptools==80.9.0",
]

[dependency-groups]
lint = [
    "ruff>=0.12.5",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "types-PyYAML>=6.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
]

[tool.uv.workspace]
members = [
    "sdks/bitwarden",
]

[tool.uv.sources]
pulumi-bitwarden = { workspace = true }

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["test"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["modules"]
omit = [
    "test/*",
    "*/test_*",
    "sdks/*",
    "__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = [
    "pulumi.*",
    "pulumi_github.*",
    "pulumi_bitwarden.*",
]
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | sdks
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip_glob = ["sdks/*"]

[tool.bandit]
exclude_dirs = ["test", "sdks"]
skips = ["B101"]  # Skip assert_used test since we use asserts in tests

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
]

[tool.ruff.lint.per-file-ignores]
"test/**/*.py" = [
    "B018",  # Found useless expression (for test fixtures)
]

# Scripts for easy hook management
[project.scripts]
install-hooks = "scripts.install-githooks:main"
install-hooks-quick = "scripts.install-githooks:install_quick"
